--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,7 @@ android {
         unitTests {
             includeAndroidResources = true
         }
+        unitTests.returnDefaultValues = true
     }
     compileOptions {
         sourceCompatibility = '1.8'
