Try to add credentials

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,9 @@
 sonar.projectKey=aurora
 sonar.projectName=aurora
 
+sonar.login=Jenkins
+sonar.password=aprdnje2019cnja
+
 sonar.language=java
 
 sonar.sourceEncoding=utf-8
