--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,7 @@ dependencies {
 
     // RxJava
     implementation 'io.reactivex.rxjava2:rxjava:2.2.0'
+
+    // iText
+    implementation 'com.itextpdf:itext7-core:7.1.5'
 }
