--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,11 @@ android {
         sourceCompatibility = '1.8'
         targetCompatibility = '1.8'
     }
+
+    packagingOptions {
+        pickFirst 'com/itextpdf/io/font/*'
+        pickFirst 'com/itextpdf/io/font/cmap/*'
+    }
 }
 
 dependencies {
@@ -42,5 +47,7 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxjava:2.2.0'
 
     // iText
-    implementation 'com.itextpdf:itext7-core:7.1.5'
+    implementation 'com.itextpdf:io:7.0.5'
+    implementation 'com.itextpdf:kernel:7.0.5'
+    implementation 'com.itextpdf:layout:7.0.5'
 }
