--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.aurora.aurora"
-        minSdkVersion 26
+        minSdkVersion 22
         targetSdkVersion 28
         versionCode 1
         versionName "0.1"
@@ -25,11 +25,6 @@ android {
         sourceCompatibility = '1.8'
         targetCompatibility = '1.8'
     }
-
-    packagingOptions {
-        pickFirst 'com/itextpdf/io/font/*'
-        pickFirst 'com/itextpdf/io/font/cmap/*'
-    }
 }
 
 dependencies {
@@ -46,8 +41,8 @@ dependencies {
     // RxJava
     implementation 'io.reactivex.rxjava2:rxjava:2.2.0'
 
-    // iText
-    implementation 'com.itextpdf:io:7.1.5'
-    implementation 'com.itextpdf:kernel:7.1.5'
-    implementation 'com.itextpdf:layout:7.1.5'
+    // iText not yet working or used
+//    implementation 'com.itextpdf:io:7.1.5'
+//    implementation 'com.itextpdf:kernel:7.1.5'
+//    implementation 'com.itextpdf:layout:7.1.5'
 }
