--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".NotFoundActivity"></activity>
         <activity android:name=".FeedbackActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
