--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,6 @@ dependencies {
     // RxJava
     implementation 'io.reactivex.rxjava2:rxjava:2.2.0'
 
+    // Gson
+    implementation 'com.google.code.gson:gson:2.8.5'
 }
