--- a/auroralib/build.gradle
+++ b/auroralib/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'java-library'
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.google.code.gson:gson:2.8.5'
 }
 
 sourceCompatibility = "8"
