--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,12 +22,14 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility = '1.8'
-        targetCompatibility = '1.8'
+        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_1_8
     }
 
     // error about duplicates if some of these are not excluded
     packagingOptions {
+        pickFirst  'edu/stanford/nlp/pipeline/demo/*'
+
         pickFirst 'META-INF/DEPENDENCIES.txt'
         pickFirst 'META-INF/LICENSE.txt'
         pickFirst 'META-INF/NOTICE.txt'
@@ -53,7 +55,7 @@ tasks.withType(Test) {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     /Added for the DrawerLayout/
@@ -75,11 +77,19 @@ dependencies {
 
     // Apache POI for word files
     // newer versions of xmlsec are compiled with JDK 8 which does not work in Android Studio 2.x!
-    implementation ('org.apache.santuario:xmlsec:2.0.0') {
+    implementation('org.apache.santuario:xmlsec:2.0.0') {
         // break compilation because it includes stax-api which is under forbidden package 'javax.xml.stream'
         exclude group: 'org.codehaus.woodstox'
     }
-
     implementation files('libs/poishadow-all.jar')
 
+    // CoreNLP
+    implementation('edu.stanford.nlp:stanford-corenlp:3.9.2') {
+        exclude group: 'org.apache.lucene'
+        exclude group: 'com.sun.xml.bind'
+    }
+    implementation('edu.stanford.nlp:stanford-corenlp:3.9.2:models') {
+        exclude group: 'org.apache.lucene'
+        exclude group: 'com.sun.xml.bind'
+    }
 }
