--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,7 +65,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
     // RxJava
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.0'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.8'
 
     // Gson
     implementation 'com.google.code.gson:gson:2.8.5'
