--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,7 +84,11 @@ dependencies {
     implementation files('libs/poishadow-all.jar')
 
     // Firebase
-    implementation 'com.google.firebase:firebase-core:16.0.1'
+    implementation 'com.google.firebase:firebase-core:16.0.8'
+    //Translation
+    implementation  'com.android.volley:volley:1.1.1'
+
+
 
 }
 
