--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,7 +55,7 @@ tasks.withType(Test) {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     /Added for the DrawerLayout/
@@ -65,38 +65,32 @@ dependencies {
     testImplementation 'org.robolectric:robolectric:4.2'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-
     // RxJava
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.8'
-
     // Gson
     implementation 'com.google.code.gson:gson:2.8.5'
-
     // auroralib
     implementation project(':auroralib')
-
     // Apache POI for word files
     // newer versions of xmlsec are compiled with JDK 8 which does not work in Android Studio 2.x!
     implementation('org.apache.santuario:xmlsec:2.0.0') {
         // break compilation because it includes stax-api which is under forbidden package 'javax.xml.stream'
         exclude group: 'org.codehaus.woodstox'
     }
-
     implementation files('libs/poishadow-all.jar')
-
     // Firebase
     implementation 'com.google.firebase:firebase-core:16.0.1'
-
     // CoreNLP
     implementation('edu.stanford.nlp:stanford-corenlp:3.9.2') {
         exclude group: 'org.apache.lucene'
         exclude group: 'com.sun.xml.bind'
     }
-    implementation('edu.stanford.nlp:stanford-corenlp:3.9.2:models') {
-        exclude group: 'org.apache.lucene'
-        exclude group: 'com.sun.xml.bind'
-    }
+//    implementation('edu.stanford.nlp:stanford-corenlp:3.9.2:models') {
+//        exclude group: 'org.apache.lucene'
+//        exclude group: 'com.sun.xml.bind'
+//    }
+    implementation files('libs/stanford-corenlp-3.9.2-models.jar-small')
 }
 
 // Firebase
