--- a/auroralib/build.gradle
+++ b/auroralib/build.gradle
@@ -3,6 +3,11 @@ apply plugin: 'java-library'
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.google.code.gson:gson:2.8.5'
+
+    implementation('edu.stanford.nlp:stanford-corenlp:3.9.2') {
+        exclude group: 'org.apache.lucene'
+        exclude group: 'com.sun.xml.bind'
+    }
 }
 
 sourceCompatibility = "8"
