--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,7 +43,7 @@
         AuroraServices
         android:permission="com.aurora.aurora.permission.AURORA_SERVICES" in service definition for permission
         -->
-        <service android:name="com.aurora.internalservice.internalcache.CacheService">
+        <service android:name="com.aurora.plugin.CacheService">
 
 
             <intent-filter>
