--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,7 @@ android {
 
     // error about duplicates if some of these are not excluded
     packagingOptions {
-        pickFirst  'edu/stanford/nlp/pipeline/demo/*'
+        pickFirst 'edu/stanford/nlp/pipeline/demo/*'
 
         pickFirst 'META-INF/DEPENDENCIES.txt'
         pickFirst 'META-INF/LICENSE.txt'
@@ -61,6 +61,7 @@ dependencies {
     /Added for the DrawerLayout/
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.robolectric:robolectric:4.2'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
@@ -75,6 +76,10 @@ dependencies {
 
     // auroralib
     implementation project(':auroralib')
+
+    // ViewModel
+    implementation "android.arch.lifecycle:viewmodel:1.1.1"
+    implementation "android.arch.lifecycle:extensions:1.1.1"
 
     // Apache POI for word files
     // newer versions of xmlsec are compiled with JDK 8 which does not work in Android Studio 2.x!
