Fix code smells and change sonar properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,8 +4,8 @@ sonar.projectName=aurora
 sonar.language=java
 
 sonar.sourceEncoding=utf-8
-sonar.sources=app/src/main/java
+sonar.sources=app/src/main/java,auroralib/src/main/java
 
 sonar.java.source=1.8
 
-sonar.tests=app/src/test/java
+sonar.tests=app/src/test/java,auroralib/src/test/java
