--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,9 +11,13 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
+        debug {
+            buildConfigField 'String', "TRANSLATION_API", Aurora_Translation_API_Key
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            buildConfigField 'String', "TRANSLATION_API", Aurora_Translation_API_Key
         }
     }
     testOptions {
@@ -90,6 +94,8 @@ dependencies {
 
     //Translation
     implementation  'com.android.volley:volley:1.1.1'
+    // mocking in tests
+    testImplementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.6'
 
 
     implementation 'com.google.firebase:firebase-core:16.0.1'
@@ -99,6 +105,8 @@ dependencies {
         exclude group: 'com.sun.xml.bind'
     }
     implementation files('libs/stanford-corenlp-3.9.2-models.jar-small')
+
+
 
 }
 
