--- a/gradle.properties
+++ b/gradle.properties
@@ -11,5 +11,7 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+# This is the API key for translation that was retrieved
+Aurora_Translation_API_Key="AIzaSyBT0I7M_hZlTmpD1hqC8beY1ILzpWGSU4s"
 
 
