--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,6 +95,8 @@ dependencies {
 
     // Firebase
     implementation 'com.google.firebase:firebase-core:16.0.1'
+    implementation 'com.firebase:firebase-jobdispatcher:0.8.6'
+
     // CoreNLP
     implementation('edu.stanford.nlp:stanford-corenlp:3.9.2') {
         exclude group: 'org.apache.lucene'
