--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,57 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="com.aurora.aurora">
+          xmlns:tools="http://schemas.android.com/tools"
+          package="com.aurora.aurora">
 
-    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
-        android:allowBackup="false"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+            android:allowBackup="false"
+            android:icon="@mipmap/ic_launcher"
+            android:label="@string/app_name"
+            android:roundIcon="@mipmap/ic_launcher_round"
+            android:supportsRtl="true"
+            android:theme="@style/AppTheme">
         <activity
-            android:name="com.aurora.market.MarketPluginListActivity"
-            android:label="@string/title_marketplugin_list"
-            android:theme="@style/AppTheme.NoActionBar">
+                android:name="com.aurora.market.MarketPluginListActivity"
+                android:label="@string/title_marketplugin_list"
+                android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <activity
-            android:name="com.aurora.market.MarketPluginDetailActivity"
-            android:label="@string/title_marketplugin_detail"
-            android:parentActivityName="com.aurora.market.MarketPluginListActivity"
-            android:theme="@style/AppTheme.NoActionBar">
+                android:name="com.aurora.market.MarketPluginDetailActivity"
+                android:label="@string/title_marketplugin_detail"
+                android:parentActivityName="com.aurora.market.MarketPluginListActivity"
+                android:theme="@style/AppTheme.NoActionBar">
             <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.aurora.market.MarketPluginListActivity" />
+                    android:name="android.support.PARENT_ACTIVITY"
+                    android:value="com.aurora.market.MarketPluginListActivity"/>
         </activity>
         <activity android:name=".FeedbackActivity">
             <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity" />
+                    android:name="android.support.PARENT_ACTIVITY"
+                    android:value=".MainActivity"/>
         </activity>
         <!-- The singleTop option makes sure the MainActivity is resumed (not recreated) when back is pressed -->
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name"
-            android:launchMode="singleTop"
-            android:theme="@style/AppTheme.NoActionBar">
+                android:name=".MainActivity"
+                android:label="@string/app_name"
+                android:launchMode="singleTop"
+                android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
             <intent-filter tools:ignore="AppLinkUrlError">
-                <action android:name="android.intent.action.VIEW" />
+                <action android:name="android.intent.action.VIEW"/>
 
-                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.DEFAULT"/>
 
-                <data android:mimeType="application/vnd.openxmlformats-officedocument.wordprocessingml.document" />
-                <data android:mimeType="text/plain" />
-                <data android:mimeType="application/pdf" />
+                <data android:mimeType="application/vnd.openxmlformats-officedocument.wordprocessingml.document"/>
+                <data android:mimeType="text/plain"/>
+                <data android:mimeType="application/pdf"/>
             </intent-filter>
         </activity>
+
+        <!-- Needed for immediate syncs -->
+        <service
+                android:name="com.aurora.data.network.AuroraSyncIntentService"
+                android:exported="false"/>
+
+        <!-- Service declaration for the FirebaseJobDispatcher -->
+        <service
+                android:name="com.aurora.data.network.AuroraFirebaseJobService"
+                android:exported="false">
+            <intent-filter>
+                <action android:name="com.firebase.jobdispatcher.ACTION_EXECUTE"/>
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
